--- a/html/index.html
+++ b/html/index.html
@@ -3,33 +3,32 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <title>Цистерни.ua - головна</title>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="./scripts/jquery-2.2.0.js"></script>
-	  <script type="text/javascript" src="./scripts/script.js"></script>
-	  <link rel="shortcut icon" href="images/logo2.ico" />
+    <link href="/css/style.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="/scripts/jquery-2.2.0.js"></script>
+	  <script type="text/javascript" src="/scripts/script.js"></script>
+	  <link rel="shortcut icon" href="/images/logo2.ico" />
 </head>
 <body>
 	<div id='header_'>
-	  <a href="{{path('acme_tanks_homepage')}}">
-	    <img alt src="{{ asset('images/back.png') }}" width="100%" height="250">
-      </a>
+	  <a href="/tanks">
+	    <img alt src="/images/back.png" width="100%" height="250">
+    </a>
 	</div>
-	{% include  'AcmeTanksBundle::messForm.html.twig'%}
-	{% include  'AcmeTanksBundle::menu.html.twig'%}
+	{% include  'AcmeTanksBundle::messForm.html.twig'%}<br>
+	{% include  'AcmeTanksBundle::menu.html.twig'%}<br>
 	{%block user_form %} {% endblock%}
-	<div id = 'arrow' scroll = '0'><img width = '40' src = "./images/arrow.png" ></div>
+	<div id = 'arrow' scroll = '0'><img width = '40' src = "/images/arrow.png" ></div>
 	<div id='theme_'>
-	  {% block theme %}
-        <div class='base-blocks' style='background:#fa0'>
-		  <div><h1>{% trans %}Вітаємо на сайті Цистерни.ua{% endtrans%}</h1>
+      <div class='base-blocks' style='background:#fa0'>
+		  <div><h1>Вітаємо на сайті Цистерни.ua</h1>
 		  <font color='#111' size='5' face="verdana">
-		    {% trans %}тут ви зможете дізнатись остані новини від картошкі{% endtrans%},
-		    <br/>{% trans %}обговороити з друзями подробицы гри{% endtrans%},
-			<br/>{% trans %}а також переглянути характеристики танків{% endtrans%}
+		    тут ви зможете дізнатись остані новини від картошкі,
+		    <br/>обговороити з друзями подробицы гри,
+			<br/>а також переглянути характеристики танків
 		  </font>
 		  </div>
 		</div>
-		<h1>{% trans %}новини{% endtrans %}</h1>
+		<h1>новини</h1>
 		<div id='news'></div>
 		<script type="text/javascript">
 			$('#news').load('/news.html  .small-news', function(responseTxt, statusTxt, xhr){
@@ -37,7 +36,6 @@
 				$('#news a').attr("target", "_blank");
 			});
 		</script>
-      {% endblock %}
 	</div>
 </body>
 </html>
